# introvert_vs_extrovert_classification

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
notebooks/: initial_exploration.ipynb
src/introverts_vs_extroverts/: __init__.py  __main__.py  settings.py
src/introverts_vs_extroverts/pipelines/data_processing/: nodes.py  pipeline.py
